# SBOL-utilities

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  GB2SO  MANIFEST.in  README.md  SO2GB  dev.py  gb2so.csv  genbank.out  graph-sbol  graph_sbol.py  out.nt  pyproject.toml  sbol.nt  sbol_library_template.xlsx  sbolgraph-standalone.js  script.py  setup.cfg  setup.py  so2gb.csv  temp.nt  test.gb
.github/workflows/: docstr-coverage.yml  python-app.yml
docs/: conf.py  index.rst  requirements.txt
iGEM/: BBF10K_000034.gb
sbol_utilities/: IDT_calculate_complexity_score.py  __init__.py  build_planning.py  calculate_complexity_score.py  calculate_complexity_scores.py  calculate_sequences.py  check_namespace.py  component.py  conversion.py  default_components.py  define_module.py  excel2sbol.py  excel_cell_selector.py  excel_to_sbol.py  expand_combinatorial_derivations.py  gb2so.csv  graph_sbol.py  helper_functions.py  package.py  sbol3_genbank_conversion.py  sbol3_sbol2_conversion.py  sbol_diff.py  sbolgraph-standalone.js  sep_054_extension.ttl  sequence.py  so2gb.csv  workarounds.py
sbol_utilities.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sbol_utilities/igem/: qc_checker.py  qc_data.json  qc_default_evaluators.py  qc_entity.py  qc_field.py  qc_field_quality_score.py  qc_fieldtype.py  qc_input_data.py
test/: helpers.py  sbol3.nt  test_IDT_calculate_complexity_score.py  test_build_planning.py  test_calculate_complexity_scores.py  test_calculate_sequences.py  test_component.py  test_conversion.py  test_define_module.py  test_docstr_coverage.py  test_excel_to_sbol.py  test_expand_combinatorial_derivations.py  test_genbank_sbol3_direct.py  test_graph_sbol.py  test_helpers.py  test_package.py  test_sbol2_sbol3_direct.py  test_sbol_diff.py  test_secret_idt_credentials.json  test_sequence.py
test/igem/: test_field_quality_score.py
test/test_files/: BBa_J23101.dot  BBa_J23101.xml  BBa_J23101_3to2to3.nt  BBa_J23101_bad_package.nt  BBa_J23101_bad_package2.nt  BBa_J23101_from_fasta.nt  BBa_J23101_from_fasta_altname.nt  (+64 more)
(+35 files in other folders)
